<resources>
    <string name="app_name">Математика для школьников</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Математика для школьников</string>
    <string name="nav_header_subtitle">Тренажер для развития устного счета</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Главная страница</string>
    <string name="menu_multiplication">Умножение</string>
    <string name="menu_summation">Сложение</string>
    <string name="label_testing_multiplication">Тренировка - умножения</string>
    <string name="label_training_multiplication">Подготовка Умножение</string>
    <string name="label_testing_summation">Тестирование знаний СЛОЖЕНИЕ</string>
    <string name="label_training_summation">Подготовка - СЛОЖЕНИЕ</string>
    <string name="text_button_training">Перейти к обучению</string>
    <string name="text_button_testing">Перейти к упражнению</string>
    <string name="text_button_start_summation">Тренировать сложение</string>
    <string name="text_button_start_multiplication">Тренировать умножение</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>